--- a/MobileApp/app/src/main/res/values/strings.xml
+++ b/MobileApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">DiabetesMobileApp</string>
+    <string name="app_name">Dziennik cukrzyka</string>
 </resources>
